# N-Day-Exposure-Window-Calculator-for-Binary-Kernels

./: .gitignore  Dockerfile  README.md  cli.py  install.ps1  install.sh  pyproject.toml  requirements.txt
core/: __init__.py  disassembler.py  elf_parser.py  exceptions.py  exposure.py  function_detector.py  ir.py  loader.py  matcher.py  normalizer.py
fingerprints/: CVE-2022-20421.yaml  CVE-2022-2588.yaml  CVE-2023-0266.yaml
validation/: __init__.py  benchmark.py  ground_truth.csv  test_ir.py  test_matcher.py
