[tool.poetry]
name = "patch-shadow"
version = "0.1.0"
description = "Patch presence verification for N-day kernel vulnerabilities in vendor binaries"
authors = ["Alaa"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyelftools = "^0.31"
capstone = "^5.0"
angr = "^9.2"
typer = "^0.12"
pyyaml = "^6.0"
jinja2 = "^3.1"
requests = "^2.31"

[tool.poetry.scripts]
patch-shadow = "cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"